<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginBottom="@dimen/_8sdp"
    android:backgroundTint="@color/snow"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="@dimen/_8sdp"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/img_item"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_location" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:textColor="@color/Main_Color"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toEndOf="@id/img_item"
            app:layout_constraintTop_toTopOf="@id/img_item"
            android:text="@string/name"
            />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_12sdp"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toEndOf="@id/name"
            app:layout_constraintTop_toTopOf="@id/img_item"
            tools:text="Panadol" />

        <TextView
            android:id="@+id/txt_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:textColor="@color/Main_Color"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toEndOf="@id/img_item"
            android:text="@string/price" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toEndOf="@id/txt_price"
            tools:text="01558280211" />


        <TextView
            android:id="@+id/qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:textColor="@color/Main_Color"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/price"
            app:layout_constraintStart_toEndOf="@id/img_item"
            android:text="@string/quantity"
            />

        <TextView
            android:id="@+id/txt_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/price"
            app:layout_constraintStart_toEndOf="@id/qty"
            tools:text="67" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sub"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/ic_baseline_remove_24"
            app:layout_constraintBottom_toBottomOf="@+id/qty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_price" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="30dp"
            android:layout_marginTop="@dimen/_2sdp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_sub"
            app:layout_constraintEnd_toStartOf="@+id/btn_sub"
            app:layout_constraintTop_toTopOf="@id/btn_sub"
            tools:text="16" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/ic_add_24"
            android:drawablePadding="@dimen/_10sdp"
            android:gravity="center"
            app:iconPadding="@dimen/_12sdp"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@id/btn_sub" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>